--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!-- What is HTML?-->
         <section>
           <h3>What is HTML?</h3>
-          <p>HTML is the code that controls what is displayed on websites</p>
+          <p>the code that controls what is displayed on sites</p>
           <img src = "images/homepage-view.png">
         </section>
         
