--- a/intro/index.html
+++ b/intro/index.html
@@ -36,13 +36,13 @@
 			
 			</div>
 
-			<!--<div class="column">
+			<div class="column">
 			
 			<h2>Class 2: Curly Braces</h2>
 			<ul>
-			<li><a href="http://milwaukeegdi.github.io/intro/class2.html#/" target="_blank">Class 2 Slides</a></li>
-			<li><a href="http://milwaukeegdi.github.io/intro/homework2.html" target="_blank">Class 2 Homework</a></li>
-			<li><a href="worksheet2.pdf" target="_blank">Class 2 Worksheet</a></li>
+			<li><a href="class2.html#/" target="_blank">Class 2 Slides</a></li>
+			<!--<li><a href="http://milwaukeegdi.github.io/intro/homework2.html" target="_blank">Class 2 Homework</a></li>
+			<li><a href="worksheet2.pdf" target="_blank">Class 2 Worksheet</a></li>-->
 			</ul>
 			
 			</div>
@@ -51,9 +51,9 @@
 			
 			<h2>Class 3: More CSS</h2>
 			<ul>
-			<li><a href="http://milwaukeegdi.github.io/intro/class3.html#/" target="_blank">Class 3 Slides</a></li>
-			<li><a href="http://milwaukeegdi.github.io/intro/homework3.html" target="_blank">Class 3 Homework</a></li>
-			<li><a href="worksheet3.pdf" target="_blank">Class 3 Worksheet</a></li>
+			<li><a href="class3.html#/" target="_blank">Class 3 Slides</a></li>
+			<!--<li><a href="http://milwaukeegdi.github.io/intro/homework3.html" target="_blank">Class 3 Homework</a></li>
+			<li><a href="worksheet3.pdf" target="_blank">Class 3 Worksheet</a></li>-->
 			</ul>
 			
 			</div>
@@ -62,11 +62,11 @@
 			
 			<h2>Class 4: Positioning</h2>
 			<ul>
-			<li><a href="http://milwaukeegdi.github.io/intro/class4.html#/" target="_blank">Class 4 Slides</a></li>
-			<li><a href="worksheet4.pdf" target="_blank">Class 4 Worksheet</a></li>
+			<li><a href="class4.html#/" target="_blank">Class 4 Slides</a></li>
+			<!--<li><a href="worksheet4.pdf" target="_blank">Class 4 Worksheet</a></li>-->
 			</ul>
 			
-			</div>-->
+			</div>
 			
 
 			</section>
