Updated styles to match brand guides

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Milwaukee GDI</title>
 	<style>
 		body {
-			background: url(images/gdi_logo_badge.png) black center 50px no-repeat;
+			background: url(images/gdi_logo_badge.png) #333333 center 50px no-repeat;
 		}
 	</style>
 </head>
