--- a/Webconcepts/index.html
+++ b/Webconcepts/index.html
@@ -26,7 +26,7 @@
 			
 			<h2>Class Links</h2>
 			<ul>
-			<li><a href="class1.html/#" target="_blank">Class Slides</a></li>
+			<li><a href="class1.html" target="_blank">Class Slides</a></li>
 			<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
 			<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
 			</ul>
