--- a/Webconcepts/class1.html
+++ b/Webconcepts/class1.html
@@ -51,7 +51,7 @@
         
         <!-- Opening -->
 				<section>
-					<h2>Intro to Web Concepts</h2>
+					<h2>The Web How Does it Work?</h2>
                     <img src="images/circle-gdi-logo.png" alt="GDI Logo"/>
                   	<p><em>or</em></p>
           			<h4>What is that Web Developer talking about?</h4>
