--- a/intro/index.html
+++ b/intro/index.html
@@ -2,85 +2,56 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>GDI: Intro Links </title>
-
+		<title>Intro to HTML/CSS - Milwaukee GDI</title>
 		<link rel="stylesheet" href="css/homework.css">
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
+		<!--link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"-->
 	</head>
 
 	<body>
+		<main>
 
-		<div class="container">
-			
 			<header>
-			<img src="images/gdi_logo_badge.png" class="gdi-logo" alt="GDI Milwaukee">
-
-			<h1> <br>Intro to HTML/CSS:<br>
-			 Class Links</h1>
+				<img src="images/gdi_logo_badge.png" class="logo" alt="GDI Milwaukee" height="180">
+				<h1>Intro to HTML/CSS:</h1>
 			</header>
-
-
 			<section class="lists">
-			
-			<div class="column">
-			
-			<h2>Class 1: Angle Brackets</h2>
-			<ul>
-			<li><a href="class1.html#/" target="_blank">Class 1 Slides</a></li>
-			<li><a href="homework1.html" target="_blank">Class 1 Homework</a></li>
-			<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
-			<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
-			</ul>
-			
-			
-			</div>
 
-			<div class="column">
-			
-			<h2>Class 2: Curly Braces</h2>
-			<ul>
-			<li><a href="class2.html#/" target="_blank">Class 2 Slides</a></li>
-			<!--<li><a href="http://milwaukeegdi.github.io/intro/homework2.html" target="_blank">Class 2 Homework</a></li>
-			<li><a href="worksheet2.pdf" target="_blank">Class 2 Worksheet</a></li>-->
-			</ul>
-			
-			</div>
+				<div class="col">
+					<h4>Class 1: Angle Brackets</h4>
+					<ul>
+						<li><a href="class1.html#/" target="_blank">Class 1 Slides</a></li>
+						<li><a href="homework1.html" target="_blank">Class 1 Homework</a></li>
+						<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
+						<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
+					</ul>
+				</div>
 
-			<div class="column">
-			
-			<h2>Class 3: More CSS</h2>
-			<ul>
-			<li><a href="class3.html#/" target="_blank">Class 3 Slides</a></li>
-			<!--<li><a href="http://milwaukeegdi.github.io/intro/homework3.html" target="_blank">Class 3 Homework</a></li>
-			<li><a href="worksheet3.pdf" target="_blank">Class 3 Worksheet</a></li>-->
-			</ul>
-			
-			</div>
+				<div class="col">
+					<h4>Class 2: Curly Braces</h4>
+					<ul>
+						<li><a href="class2.html#/" target="_blank">Class 2 Slides</a></li>
+					</ul>
+				</div>
 
-			<div class="column">
-			
-			<h2>Class 4: Positioning</h2>
-			<ul>
-			<li><a href="class4.html#/" target="_blank">Class 4 Slides</a></li>
-			<!--<li><a href="worksheet4.pdf" target="_blank">Class 4 Worksheet</a></li>-->
-			</ul>
-			
-			</div>
-			
+				<div class="col">
+					<h4>Class 3: More CSS</h4>
+					<ul>
+						<li><a href="class3.html#/" target="_blank">Class 3 Slides</a></li>
+					</ul>
+				</div>
+
+				<div class="col">
+					<h4>Class 4: Positioning</h4>
+					<ul>
+						<li><a href="class4.html#/" target="_blank">Class 4 Slides</a></li>
+					</ul>
+				</div>
 
 			</section>
-
 			<footer>
-			
-			<p>See what's happening with Girl Develop It Milwaukee on <a href="http://www.meetup.com/Girl-Develop-It-Milwaukee/" target="_blank">MeetUp.com</a>.</p>
-
+				<p>See what's happening with Milwaukee Girl Develop It on <a href="http://www.meetup.com/Girl-Develop-It-Milwaukee/" target="_blank">meetup.com</a>.</p>
 			</footer>
-
-
-
-		</div>
-		
+		</main>
 	</body>
 
 </html>
