Updated styles on webconcepts main page to mimic new design.

--- a/intro/index.html
+++ b/intro/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Intro to HTML/CSS - Milwaukee GDI</title>
-		<link rel="stylesheet" href="css/homework.css">
+		<link rel="stylesheet" href="css/main.css">
 		<!--link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"-->
 	</head>
 
@@ -16,8 +16,11 @@
 			</header>
 			<section class="lists">
 
-				<div class="col">
-					<h4>Class 1: Angle Brackets</h4>
+				<div class="col-3">
+					<div class="title">
+						<h4><img src="../images/materials_html.png" alt="Introduction to web concepts" height="20" />
+						Class 1: Angle Brackets</h4>
+					</div>
 					<ul>
 						<li><a href="class1.html#/" target="_blank">Class 1 Slides</a></li>
 						<li><a href="homework1.html" target="_blank">Class 1 Homework</a></li>
@@ -26,22 +29,31 @@
 					</ul>
 				</div>
 
-				<div class="col">
-					<h4>Class 2: Curly Braces</h4>
+				<div class="col-3">
+					<div class="title">
+						<h4><img src="../images/materials_html.png" alt="Introduction to web concepts" height="20" />
+						Class 2: Curly Braces</h4>
+					</div>
 					<ul>
 						<li><a href="class2.html#/" target="_blank">Class 2 Slides</a></li>
 					</ul>
 				</div>
 
-				<div class="col">
-					<h4>Class 3: More CSS</h4>
+				<div class="col-3">
+					<div class="title">
+						<h4><img src="../images/materials_html.png" alt="Introduction to web concepts" height="20" />
+						Class 3: More CSS</h4>
+					</div>
 					<ul>
 						<li><a href="class3.html#/" target="_blank">Class 3 Slides</a></li>
 					</ul>
 				</div>
 
-				<div class="col">
-					<h4>Class 4: Positioning</h4>
+				<div class="col-3">
+					<div class="title">
+						<h4><img src="../images/materials_html.png" alt="Introduction to web concepts" height="20" />
+						Class 4: Positioning</h4>
+					</div>
 					<ul>
 						<li><a href="class4.html#/" target="_blank">Class 4 Slides</a></li>
 					</ul>
