--- a/Webconcepts/index.html
+++ b/Webconcepts/index.html
@@ -2,76 +2,37 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>GDI: The Web: How Does it Work? </title>
-
-		<link rel="stylesheet" href="css/homework.css">
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
+		<title>Web Fundamentals - Milwaukee GDI</title>
+		<link rel="stylesheet" href="css/main.css">
+		<!--link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"-->
 	</head>
 
 	<body>
+		<main>
 
-		<div class="container">
-			
 			<header>
-			<img src="images/gdi_logo_badge.png" class="gdi-logo" alt="GDI Milwaukee">
-
-			<h1> <br>The Web: How Does it Work?</h1>
+				<img src="images/gdi_logo_badge.png" class="logo" alt="GDI Milwaukee" height="180">
+				<h1>The Web: How Does it Work?</h1>
 			</header>
-
-
 			<section class="lists">
-			
-			<div class="column">
-			
-			<h2>Class Links</h2>
-			<ul>
-			<li><a href="class1.html" target="_blank">Class Slides</a></li>
-			<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
-			<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
-			</ul>
-			
-			
-			</div>
 
-			<div class="column">
-			
-			<h2></h2>
-			<ul>
-			
-			</ul>
-			
-			</div>
-
-			<div class="column">
-			
-			<h2></h2>
-			<ul>
-			</ul>
-			
-			</div>
-
-			<div class="column">
-			
-			<h2></h2>
-			<ul>
-			</ul>
-			
-			</div>
-			
+				<div class="col-1">
+					<div class="title">
+						<h4><img src="../images/materials_webconcepts.png" alt="Introduction to web concepts" height="20" />
+						Class Resources</h4>
+					</div>
+					<ul>
+						<li><a href="class1.html#/" target="_blank">Class Slides</a></li>
+						<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
+						<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
+					</ul>
+				</div>
 
 			</section>
-
 			<footer>
-			
-			<p>See what's happening with Girl Develop It Milwaukee on <a href="http://www.meetup.com/Girl-Develop-It-Milwaukee/" target="_blank">MeetUp.com</a>.</p>
-
+				<p>See what's happening with Milwaukee Girl Develop It on <a href="http://www.meetup.com/Girl-Develop-It-Milwaukee/" target="_blank">meetup.com</a>.</p>
 			</footer>
-
-
-
-		</div>
-		
+		</main>
 	</body>
 
 </html>
