Linked logo back to class homepage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="col-3">
 				<ul class="classes">
 					<li>
-						<a href="intro/index.html" >
+						<a href="intro" >
 							<div class="class-icon">
 					 			<img src="images/materials_html.png" alt="intro to html and css" height="80" />
 							</div>
@@ -59,7 +59,7 @@
 			</div>-->
 		</section>
 	</main>
-	
+
 	<footer>
 		<p>See what's happening with Milwaukee Girl Develop It on <a href="http://www.meetup.com/Girl-Develop-It-Milwaukee/" target="_blank">meetup.com</a>.</p>
 	</footer>
