--- a/Webconcepts/index.html
+++ b/Webconcepts/index.html
@@ -11,7 +11,7 @@
 		<main>
 
 			<header>
-				<img src="images/gdi_logo_badge.png" class="logo" alt="GDI Milwaukee" height="180">
+				<a href="/index.html"><img src="images/gdi_logo_badge.png" class="logo" alt="GDI Milwaukee" height="180"></a>
 				<h1>The Web: How Does it Work?</h1>
 			</header>
 			<section class="lists">
