--- a/intro/index.html
+++ b/intro/index.html
@@ -11,7 +11,7 @@
 		<main>
 
 			<header>
-				<img src="images/gdi_logo_badge.png" class="logo" alt="GDI Milwaukee" height="180">
+				<a href="/"><img src="images/gdi_logo_badge.png" class="logo" alt="GDI Milwaukee" height="180"></a>
 				<h1>Intro to HTML/CSS:</h1>
 			</header>
 			<section class="lists">
