--- a/Webconcepts/index.html
+++ b/Webconcepts/index.html
@@ -25,6 +25,7 @@
 						<li><a href="class1.html#/" target="_blank">Class Slides</a></li>
 						<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
 						<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
+						<li><a href="https://codepen.io/gdirdu/pen/jbJjPY" target="_blank">CodePen Exercise Link</a></li>
 					</ul>
 				</div>
 
