--- a/Webconcepts/class1.html
+++ b/Webconcepts/class1.html
@@ -72,6 +72,17 @@
 			              <li>Have fun</li>
 			            </ul>
 				</section>
+				
+					<section>
+		            <h2>Your Team</h2>
+			            <ul>
+			              <li>GDI Milwaukee, Chapter Leader: Katie Grundl</li>
+			              <li>Instructor: Maggie Fernandes - Frontend Developer @ Communicor Inc.</li>
+			              <li>TA: Jamie Schroeter - Full Stack Web Developer @ D&H </li>
+			              <li>TA: Jen Holz - Programmer Analyst @ Kohls Corporate Loss Prevention </li>
+			              <li>TA: Lilette Ramos - SQL and VBA Programmer @ BCBS </li>
+			            </ul>
+				</section>
 
 				<section>
 		          <h2>What we'll cover</h2>
