--- a/Webconcepts/class1.html
+++ b/Webconcepts/class1.html
@@ -78,7 +78,7 @@
 			            <ul>
 			              <li>GDI Milwaukee, Chapter Leader: Katie Grundl</li>
 			              <li>Instructor: Maggie Fernandes - Frontend Developer @ Communicor Inc.</li>
-			              <li>TA: Jamie Schroeter - Full Stack Web Developer @ D&H </li>
+			              <li>TA: Jamie Schroeter - Full Stack Web Developer @ D&amp;H </li>
 			              <li>TA: Jen Holz - Programmer Analyst @ Kohls Corporate Loss Prevention </li>
 			              <li>TA: Lilette Ramos - SQL and VBA Programmer @ BCBS </li>
 			            </ul>
