--- a/Webconcepts/class1.html
+++ b/Webconcepts/class1.html
@@ -76,11 +76,11 @@
 					<section>
 		            <h2>Your Team</h2>
 			            <ul>
-			              <li>GDI Milwaukee, Chapter Leader: Katie Grundl</li>
-			              <li>Instructor: Maggie Fernandes - Frontend Developer @ Communicor Inc.</li>
-			              <li>TA: Jamie Schroeter - Full Stack Web Developer @ D&amp;H </li>
-			              <li>TA: Jen Holz - Programmer Analyst @ Kohls Corporate Loss Prevention </li>
-			              <li>TA: Lilette Ramos - SQL and VBA Programmer @ BCBS </li>
+			              <li>GDI Milwaukee, Chapter Leader: <strong>Katie Grundl</strong></li>
+			              <li>Instructor: <strong>Maggie Fernandes</strong> - Frontend Developer @ Communicor Inc.</li>
+			              <li>TA: <strong>Jamie Schroeter</strong> - Full Stack Web Developer @ D&amp;H </li>
+			              <li>TA: <strong>Jen Holz</strong> - Programmer Analyst @ Kohls Corporate Loss Prevention </li>
+			              <li>TA: <strong>Lilette Ramos</strong> - SQL and VBA Programmer @ BCBS </li>
 			            </ul>
 				</section>
 
