--- a/intro/index.html
+++ b/intro/index.html
@@ -22,6 +22,7 @@
 					</div>
 					<ul>
 						<li><a href="class1.html#/" target="_blank">Class 1 Slides</a></li>
+						<li><a href="files/reference-sheet-1.pdf" target="_blank">Class 1 Reference Sheet</a></li>
 						<li><a href="homework1.html" target="_blank">Class 1 Homework</a></li>
 						<li><a href="https://validator.w3.org/#validate_by_input" target="_blank">W3 Markup Validator</a></li>
 						<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
@@ -35,6 +36,7 @@
 					</div>
 					<ul>
 						<li><a href="class2.html#/" target="_blank">Class 2 Slides</a></li>
+						<li><a href="files/reference-sheet-2.pdf" target="_blank">Class 2 Reference Sheet</a></li>
 					</ul>
 				</div>
 
@@ -45,6 +47,7 @@
 					</div>
 					<ul>
 						<li><a href="class3.html#/" target="_blank">Class 3 Slides</a></li>
+						<li><a href="files/reference-sheet-3.pdf" target="_blank">Class 3 Reference Sheet</a></li>
 					</ul>
 				</div>
 
@@ -55,6 +58,7 @@
 					</div>
 					<ul>
 						<li><a href="class4.html#/" target="_blank">Class 4 Slides</a></li>
+						<li><a href="files/reference-sheet-4.pdf" target="_blank">Class 4 Reference Sheet</a></li>
 					</ul>
 				</div>
 
